fix: fix opacity not manipulated as expeteced on mobile device

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -157,6 +157,7 @@
 @media (max-width: 48rem) {
   .aboutMePage {
     padding-top: calc(var(--header-height, 5rem) + 1rem);
+    opacity: 1 !important;
   }
 
   .timelineSection {
